without asking when the user wants.


*****  Mon Nov 2 08:07:57 CET 2020  *****

Modified the browser's BibTeX lexer style to use the user's style.

*****

Enforce replace=True when requesting to fetch PDFs from the browser
to avoid IO dialogs that let the application hanging.
It is still possible to hang if someone removes the pdf meta info
from a file without removing the PDF file, and attempts to fetch.

*****

Bumped bibmanager version to 1.3.0.

*****

Added infograph.

*****

Updated README.

*****

Updated pypi readme.


*****  Thu Dec 31 21:48:43 CET 2020  *****

Moved find_closing_bracket() from browser.py to utils.py.
Updated docstring and added tests.


*****  Sat Jan 2 13:21:39 CET 2021  *****

Re-wrote bm.loadfile() to comply with the bibtex/bst file formatting
when reading a file/piece of text.
See section 8 of the Tame the BeaST document:
http://mirror.easyname.at/ctan/info/bibtex/tamethebeast/ttb_en.pdf
Updated example and tests.

*****

Renamed bm.loadfile() to read_file().
Along with the last two commits, this fixes #79

*****

Refactored Bib.__init__() to default title to None, get value from
booktitle (if there is no title field).
Skipped no-title test (to be removed).

*****

Refactored Bib.__init__() to check that year field has a correct value.
Added test.

*****

Updated invalid-month error in Bib.__init__() to output the key of the
offending entry.
Updated tests.

*****

Added mock_open() fixture to patch subprocess.run call in pm.open().
(I would need to be careful of this fixture if I ever need to use
subprocess.run in another part of the code).
Added mocks to tests where I need to open a PDF to avoid raising
'can't open PDF' sort of issues.

*****

Tweaked entry in tests/conftest.py to prevent minor format warning.


*****  So 10. Jan 13:45:02 CET 2021  *****

Added removal of files created during testing in test_cli.py

*****

Modified u.cond_split() to ignore lettercase as BibTeX does.
Added respective tests.
